--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Classics Club
-subtitle: Welcome to the Classics Club Website. 
+subtitle: Welcome to the Classics Club website! 
 ---
